KCEF install dir fix